<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArchitMod</string>
    <string name="wmavno">1</string>
    <string name="action_settings">Settings</string>
    <string name="fab">Fab Color</string>
    <string name="acjother">Others</string>
    <string name="acjcolor">Colors</string>
    <string name="acjothersettings">Other Settings</string>
    <string name="acjupdater">Updater</string>
    <string name="acjwmaversion">Current version - 1.3.1</string>
    <string name="acjdonate">Donate</string>
    <string name="acjicons">Icons</string>
    <string name="acjotherapps">Other Apps</string>
    <string name="acjoa_detail">Support by installing my other apps</string>
    <string name="acjcons">Conversation Screen</string>
    <string name="acjchat">Chat Screen</string>
    <string name="acjcontacts">Contacts Screen</string>
    <string name="acjfabtab">Fab Color</string>
    <string name="acjpass">Password</string>
    <string name="acjreset">Reset</string>
    <string name="acj_bg">Background</string>
    <string name="acj_actionbar">Action Bar</string>
    <string name="acj_statbar">Status Bar</string>
    <string name="acj_navbar">Navigation Bar</string>
    <string name="acjuniversal">Universal</string>
    <string name="acj_fab_normal">Fab normal</string>
    <string name="acj_fab_pressed">Fab Pressed</string>
    <string name="acj_fab_bg">Fab Background Color</string>
    <string name="acj_fab_bg_pos">Fab Background Animation Position</string>
    <string name="acj_fab_bg_tut">Fab Animation Position Tutorial</string>
    <string name="acjunisum">Sets Color throughout WhatsApp</string>
    <string name="acjconssum">Sets Color on Conversation Screen</string>
    <string name="acjchatsum">Sets Color on Chating Screen</string>
    <string name="acjcontactssum">Sets Color on Contact Picker Screen</string>
    <string name="acjfabsum">Sets Color for FAB Button</string>
    <string name="acjiconssum">Changes Launcher Icon of WhatsMapp</string>
    <string name="acjpasssum">Sets Pattern Password for WhatsMapp</string>
    <string name="acjresetsum">Reset all ArchitMod Settings</string>
    <string name="acjdonatesum">Donate Archit Jain via Paypal</string>
    <string name="acj_uni_bg_sum">Change Color of Background. Default is White</string>
    <string name="acj_uni_actionbar_sum">Change Color of ActionBar on Every Screen</string>
    <string name="acj_uni_nav_sum">Change Color of NavigationBar on Every Screen</string>
    <string name="acj_uni_stat_sum">Change Color of StatusBar on Every Screen</string>
    <string name="acj_fab_normal_sum">Change Color of Fab Normal</string>
    <string name="acj_fab_pressed_sum">Change Color of Fab pressed</string>
    <string name="acj_fab_bg_sum">Change Color of Fab background</string>
    <string name="acj_fab_bg_anim_sum">Set Animation start location of Fab background</string>
    <string name="acj_fab_bg_anim_tut">This is a link to youtube video which demonstrate how to use Fab Animation position</string>

</resources>
