<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="acj_con_actionbar"
        android:summary="@string/acj_uni_bg_sum"
        android:title="@string/acj_bg">
    </Preference>
    <Preference
        android:key="acj_con_actionbar"
        android:summary="@string/acj_uni_actionbar_sum"
        android:title="@string/acj_actionbar">
    </Preference>
    <Preference
        android:key="acj_con_stat"
        android:summary="@string/acj_uni_stat_sum"
        android:title="@string/acj_statbar">
    </Preference>
    <Preference
        android:key="acj_con_nav"
        android:summary="@string/acj_uni_nav_sum"
        android:title="@string/acj_navbar">
    </Preference>
</PreferenceScreen>